cilium-cli/enterprise/hooks/manifests/ingress-policy/all-egress-deny.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "all-egress-deny"
spec:
  endpointSelector: {}
  egress:
  - {}
