cilium-cli/enterprise/hooks/manifests/ingress-policy/all-ingress-deny.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "all-ingress-deny"
spec:
  endpointSelector: {}
  ingress:
  - {}
