cilium-cli/enterprise/hooks/manifests/ingress-policy/client-egress-reserved-ingress-echo-same-node.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: client-egress-reserved-ingress-echo-same-node
spec:
  description: "Allow client to send traffic to Ingress and associated backend"
  endpointSelector:
    matchLabels:
      name: client
  egress:
  - toEndpoints:
    - matchExpressions:
      - key: reserved:ingress
        operator: Exists
  - toEndpoints:
    - matchLabels:
        name: echo-same-node
